Fixed checkbox alignment and cleaned up table rows

--- a/frontend/app/src/odSite/site.scss
+++ b/frontend/app/src/odSite/site.scss
@@ -73,7 +73,8 @@ md-card {
 
 .od-sbsys-logo {
   display: inline-block;
-  max-width: 66px;
+  max-width: 63px;
+  vertical-align: middle;
 }
 
 .od-members {
